--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -105,6 +105,7 @@
                     flex-direction: row;
                     flex-wrap: wrap;
                     padding: 10px;
+                    gap: 20px;
 
                     .booking-item {
                         border: 1px solid #EEEEEE;
@@ -119,17 +120,18 @@
                         background-color: white;
 
                         .booking-service {
-                            color: #0C4CAC;
+                            color: #8f8f8f;
                             font-weight: 500;
                         }
 
                         .booking-date {
                             color: #757575;
+                            font-size: 12px;
                         }
 
                         .booking-amount {
                             position: absolute;
-                            margin: 30px auto 0px 200px;
+                            margin: 30px auto 0px 190px;
                             font-size: 20px;
                         }
 
@@ -140,9 +142,18 @@
                             // border: 1px solid black;
                             padding: 5px;
                             border-radius: 5px;
+                        }
+
+                        .booking-status.success {
                             background-color: #b9f6ca;
                             color: #00c853;
                         }
+
+                        .booking-status.pending {
+                            background-color: #fff3e0;
+                            color: #ff9800;
+                        }
+
                     }
 
                 }
