--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -16,7 +16,7 @@
         }
 
         .pportal-body {
-            height: 100%;
+            height: 100vh;
             width: 100%;
             // border: 1px solid orange;
             background-color: #fafafa;
@@ -105,7 +105,9 @@
                     flex-direction: row;
                     flex-wrap: wrap;
                     padding: 10px;
-                    gap: 20px;
+                    gap: 15px;
+                    align-items: center;
+                    justify-content: center;
 
                     .booking-item {
                         border: 1px solid #EEEEEE;
@@ -122,6 +124,9 @@
                         .booking-service {
                             color: #8f8f8f;
                             font-weight: 500;
+                            // border: 1px solid red;
+                            width: 190px;
+                            font-size: 13px;
                         }
 
                         .booking-date {
@@ -152,6 +157,16 @@
                         .booking-status.pending {
                             background-color: #fff3e0;
                             color: #ff9800;
+                        }
+
+                        .booking-status.cancel {
+                            background-color: #ffebee;
+                            color: #f44336;
+                        }
+
+                        .booking-status.refund {
+                            background-color: #e3f2fd;
+                            color: #2196f3;
                         }
 
                     }
