Transaction card mobile 320px new

--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -237,7 +237,7 @@
                     height: 150px;
                     width: 100%;
                     margin: 0px 0px 0px 0px;
-                    border: 1px solid orange;
+                    // border: 1px solid orange;
     
                     .name-space {
                         color: #0C4CAC;
