--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -237,11 +237,13 @@
                     height: 150px;
                     width: 100%;
                     margin: 0px 0px 0px 0px;
+                    gap: 10px;
                     // border: 1px solid orange;
     
                     .name-space {
                         color: #0C4CAC;
-                        font-size: 20px;
+                        font-size: 15px;
+                        margin: 20px 0px 0px 0px;
     
                     }
                     .search-bar {
@@ -259,7 +261,7 @@
                         }
                         .formInput {
                             width: 200px;
-                            padding: 15px 0px 15px 45px;
+                            padding: 15px 10px 15px 45px;
                             border-radius: 2em;
                             border: 1px solid #ececec;
     
@@ -270,6 +272,7 @@
                         display: flex;
                         flex-direction: row;
                         gap: 20px;
+                        display: none;
                         // align-items: center;
                         // justify-content: center;
                         // border: 1px solid blue;
@@ -324,7 +327,8 @@
                             display: flex;
                             flex-direction: column;
                             gap: 12px;
-                            width: 270px;
+                            // width: 270px;
+                            width: 300px;
                             height: 135px;
                             position: relative;
                             background-color: white;
@@ -353,7 +357,7 @@
     
                             .booking-amount {
                                 position: absolute;
-                                margin: 35px auto 0px 190px;
+                                margin: 35px auto 0px 200px;
                                 font-size: 20px;
                             }
     
@@ -398,7 +402,7 @@
                                 border: 1px solid #2196f3;
                                 color: #2196f3;
                                 position: absolute;
-                                margin: 105px auto 0px 235px;
+                                margin: 105px auto 0px 265px;
                             }
     
                         }
