Portal Nav bar both for desktop and mobile next

--- a/src/View/pages/patientPortal/pportal.scss
+++ b/src/View/pages/patientPortal/pportal.scss
@@ -20,7 +20,8 @@
         }
 
         .pportal-body {
-            height: 100vh;
+            // height: 100vh;
+            height: max-content;
             width: 100%;
             // border: 1px solid orange;
             background-color: #fafafa;
@@ -234,7 +235,8 @@
             }
     
             .pportal-body {
-                height: 100vh;
+                // height: 100vh;
+                height: max-content;
                 width: 100%;
                 // border: 1px solid orange;
                 background-color: #fafafa;
@@ -450,7 +452,8 @@
             }
     
             .pportal-body {
-                height: 100vh;
+                // height: 100vh;
+                height: max-content;
                 width: 100%;
                 // border: 1px solid orange;
                 background-color: #fafafa;
@@ -665,7 +668,8 @@
             }
     
             .pportal-body {
-                height: 100vh;
+                // height: 100vh;
+                height: max-content;
                 width: 100%;
                 // border: 1px solid orange;
                 background-color: #fafafa;
