Portal Nav bar both for desktop and mobile: link added to mobile nav

--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -212,7 +212,7 @@
 
         .link {
             text-decoration: none;
-            // color: #c4dff5;
+            color: #0f5bce;
             margin: 0px auto 0px auto;
         }
 
