--- a/src/View/pages/staffLogin/slogin.scss
+++ b/src/View/pages/staffLogin/slogin.scss
@@ -85,7 +85,18 @@
 
                         }
 
-                        button {
+                        // button {
+                        //     margin: 0px auto ;
+                        //     padding: 15px 0px 15px 15px;
+                        //     border-radius: 2em;
+                        //     border: none;
+                        //     width: 100%;
+                        //     background-color: #0C4CAC;
+                        //     color: white;
+                        //     font-size: 15px;
+                        // }
+
+                        .button {
                             margin: 0px auto ;
                             padding: 15px 0px 15px 15px;
                             border-radius: 2em;
@@ -94,6 +105,7 @@
                             background-color: #0C4CAC;
                             color: white;
                             font-size: 15px;
+                            text-align: center;
                         }
 
                         .sub-info {
