--- a/src/View/pages/staffPortal/sportal.scss
+++ b/src/View/pages/staffPortal/sportal.scss
@@ -9,6 +9,234 @@
         display: flex;
         flex-direction: row;
 
+        .sportal-sidenav {
+            height: 100%;
+            width: 60px;
+            // border: 1px solid blue;
+        }
+
+        .sportal-mobile {
+            display: none;
+        }
+
+        .sportal-body {
+            // height: 100vh;
+            height: max-content;
+            width: 100%;
+            // border: 1px solid orange;
+            background-color: #fafafa;
+
+            .sportal-body-header {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-around;
+                height: 100px;
+                width: 100%;
+                margin: 0px 0px 0px 0px;
+                // border: 1px solid orange;
+
+                .name-space {
+                    color: #0C4CAC;
+                    font-size: 20px;
+
+                }
+                .search-bar {
+                    position: relative;
+                    // position: fixed;
+                    // z-index: 10;
+
+                    input:focus, textarea:focus, select:focus {
+                        outline: #0C4CAC;
+                        border: 1px solid #0C4CAC;
+                    }
+
+                    .search-icon {
+                        position: absolute;
+                        margin: 12px 0px 0px 12px;
+                        color: #e0e0e0;
+                    }
+                    .formInput {
+                        width: 220px;
+                        padding: 15px 10px 15px 45px;
+                        border-radius: 2em;
+                        border: 1px solid #ececec;
+
+
+                    }
+                }
+                .sorting {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 20px;
+                    // align-items: center;
+                    // justify-content: center;
+                    // border: 1px solid blue;
+
+                    .sorting-grid {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        height: 40px;
+                        width: 40px;
+                        // border: 1px solid blue;
+                        border-radius: 50%;
+                        background-color: white;
+                        color: #0C4CAC;
+                        box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+                        cursor: pointer;
+                    }
+                    .sorting-list {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        height: 40px;
+                        width: 40px;
+                        // border: 1px solid blue;
+                        border-radius: 50%;
+                        // background-color: white;
+                        box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+                        cursor: pointer;
+                    }
+                }
+            }
+
+            .sportal-body-body {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                // border: 1px solid orange;
+
+                .booking-wrapper {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    padding: 10px;
+                    gap: 15px;
+                    align-items: center;
+                    justify-content: center;
+                    margin-bottom: 100px;
+
+                    .booking-item {
+                        border: 1px solid #EEEEEE;
+                        padding: 15px;
+                        border-radius: 5px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 18px;
+                        width: 270px;
+                        height: 135px;
+                        position: relative;
+                        background-color: white;
+
+                        // .booking-orderno {
+                        //     background-color:#0f5bce;
+                        //     // color: white;
+                        //     color: #c4dff5;
+                        //     width: max-content;
+                        //     border-radius: 20px;
+                        //     padding: 2px 10px;
+                        // }
+
+                        .booking-service {
+                            color: #8f8f8f;
+                            font-weight: 500;
+                            // border: 1px solid red;
+                            width: 230px;
+                            font-size: 13px;
+                        }
+
+                        .booking-user {
+                            display: flex;
+                            align-items: center;
+                            gap: 5px;
+                            color: #757575;
+                            font-size: 12px;
+
+                            span {
+                                color: #2196f3;
+                            }
+                        }
+
+                        .booking-phone {
+                            display: flex;
+                            align-items: center;
+                            gap: 5px;
+                            color: #757575;
+                            font-size: 12px;
+
+                            span {
+                                color: #2196f3;
+                            }
+                        }
+
+                        .booking-date {
+                            display: flex;
+                            align-items: center;
+                            gap: 5px;
+                            color: #757575;
+                            font-size: 12px;
+
+                            span {
+                                color: #2196f3;
+                            }
+                        }
+
+                        .booking-amount {
+                            position: absolute;
+                            margin: 35px auto 0px 190px;
+                            font-size: 18px;
+                        }
+
+                        .booking-status {
+                            position: absolute;
+                            // margin: 65px auto 0px 205px;
+                            margin: 110px auto 0px 200px;
+                            font-size: 12px;
+                            // border: 1px solid black;
+                            padding: 4px 8px;
+                            border-radius: 20px;
+                        }
+
+                        .booking-status.success {
+                            background-color: #3cd4cc;
+                            color: #fff;
+                        }
+
+                        .booking-status.pending {
+                            background-color: #f49b09;
+                            color: #fff;
+                        }
+
+                        .booking-status.cancel {
+                            background-color: #ec6494;
+                            color: #fff;
+                        }
+
+                        .booking-status.refund {
+                            background-color: #2196f3;
+                            color: #fff;
+                        }
+
+                        .booking-modal {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            width: 20px;
+                            height: 20px;
+                            border-radius: 50%;
+                            padding: 5px;
+                            border: 1px solid #2196f3;
+                            color: #2196f3;
+                            position: absolute;
+                            margin: 105px auto 0px 235px;
+                        }
+
+                    }
+
+                }
+            }
+        }
     }
 
 }
