--- a/src/View/pages/staffPortal/sportal.scss
+++ b/src/View/pages/staffPortal/sportal.scss
@@ -172,8 +172,8 @@
                     gap: 15px;
                     align-items: center;
                     justify-content: center;
-                    margin-bottom: 100px;
-                    margin: -30px 0px 0px 0px;
+                    // margin-bottom: 300px;
+                    margin: -30px 0px 100px 0px;
 
                     .booking-item {
                         border: 1px solid #EEEEEE;
@@ -486,8 +486,7 @@
                         gap: 15px;
                         align-items: center;
                         justify-content: center;
-                        margin-bottom: 100px;
-                        margin: -30px 0px 0px 0px;
+                        margin: -30px 0px 100px 0px;
     
                         .booking-item {
                             border: 1px solid #EEEEEE;
@@ -801,8 +800,7 @@
                         gap: 15px;
                         align-items: center;
                         justify-content: center;
-                        margin-bottom: 100px;
-                        margin: -30px 0px 0px 0px;
+                        margin: -30px 0px 100px 0px;
     
                         .booking-item {
                             border: 1px solid #EEEEEE;
@@ -1114,8 +1112,7 @@
                         gap: 15px;
                         align-items: center;
                         justify-content: center;
-                        margin-bottom: 100px;
-                        margin: -30px 0px 0px 0px;
+                        margin: -30px 0px 100px 0px;
     
                         .booking-item {
                             border: 1px solid #EEEEEE;
