--- a/src/View/components/buttons/buttons.scss
+++ b/src/View/components/buttons/buttons.scss
@@ -15,7 +15,7 @@
             border-radius: 50%;
             /* font-size: 70px; */
             font-size: 45px;
-            background-color: #01579b;
+            background-color: #0C4CAC;
             color: white;
             display: flex;
             align-items: center;
