--- a/src/View/pages/patient/patient.scss
+++ b/src/View/pages/patient/patient.scss
@@ -62,21 +62,41 @@
 
                 } 
 
-                .patient-list {
+                .patient-toggle {
                     display: flex;
-                    gap: 7px;
-                    align-items: center;
-                    border-radius: 2em;
-                    // border: 1px solid white;
-                    padding: 10px 20px;
-                    height: 20px;
-                    color: #fff;
-                    font-size: 12px;
-                    background-color: orange;
+                    flex-direction: row;
+                    position: relative;
+                    // border: 1px solid red;
+                    width: max-content;
+                    height: max-content;
                     position: absolute;
                     left: 0px;
                     margin: 70px 300px 0px 20px;
-                    cursor: pointer;
+                    background-color:#063b8a;
+                    border-radius: 30px;
+
+                    .patient-item {
+                        display: flex;
+                        gap: 7px;
+                        align-items: center;
+                        // border-radius: 2em;
+                        // border: 1px solid white;
+                        padding: 10px 20px;
+                        height: 20px;
+                        color: #fff;
+                        font-size: 12px;
+                        // position: absolute;
+                        // left: 0px;
+                        // margin: 70px 300px 0px 150px;
+                        cursor: pointer;
+                    }
+
+                    .patient-item.active {
+                        background-color: orange;
+                        border-radius: 2em;
+                        color: white;
+                        transition: 0.5s ease all;
+                    }
                 }
 
                 .search-bar {
@@ -119,10 +139,11 @@
                 flex-wrap: wrap;
                 // border: 1px solid orange;
 
-                .sappointment-create-wrapper {
+                .patient-create-wrapper {
                     display: flex;
                     flex-direction: row;
                     flex-wrap: wrap;
+                    position: relative;
                     padding: 10px;
                     gap: 15px;
                     align-items: center;
@@ -131,6 +152,163 @@
                     margin: -30px auto 150px auto;
                     // border: 1px solid orange;
                     width: 95%;
+                    background-color: #fff;
+                    padding: 50px 0px;
+                    border-radius: 5px;
+
+                    form {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 30px;
+
+                        section {
+                            display: flex;
+                            flex-direction: row;
+                            flex-wrap: wrap;
+                            align-items: center;
+                            justify-content: center;
+                            gap: 20px;
+
+                            input:focus, textarea:focus, select:focus {
+                                outline: #0C4CAC;
+                                border: 1px solid #0C4CAC;
+                            }
+
+                            .formInput {
+                                width: 30%;
+                                padding: 15px 0px 15px 15px;
+                                border-radius: 2em;
+                                border: 1px solid #e0e0e0;
+                            }
+
+                            .formTextArea {
+                                width: 60%;
+                                padding: 20px;
+                                border-radius: 2em;
+                                border: 1px solid #e0e0e0;
+                                height: 100px;
+                            }
+    
+                            .formSelect {
+                                width: 32%;
+                                padding: 15px 20px 15px 15px;
+                                border-radius: 2em;
+                                border: 1px solid #e0e0e0;
+                                // height: 100px;
+                            }
+    
+                            .formInput.full {
+                                width: 93%;
+                            }
+    
+                            .formSelect.full {
+                                width: 97%;
+                            }
+    
+                            .formTextArea.full {
+                                width: 96%;
+                            }
+    
+                            .formInput.mid {
+                                width: 48%;
+                            }
+    
+                            .formSelect.mid {
+                                width: 48%;
+                            }
+    
+                            .formTextArea.mid {
+                                width: 50%;
+                            }
+    
+                            .formInput.sm {
+                                width: 250px;
+                            }
+    
+                            .formSelect.sm {
+                                width: 250px;
+                            }
+    
+                            .formTextArea.sm {
+                                width: 250px;
+                            }
+
+                            select {
+                                -webkit-appearance: none;
+                                -moz-appearance: none;
+                            }
+
+                            .calendar {
+                                width: 350px;
+                                margin: 0px auto;
+                                border: 1px solid #f5f5f5;
+                                // background-color: #f2f6fd;
+                                background-color: #fafafa;
+                                border-radius: 2em;
+                                position: absolute;
+                            }
+
+                            .cancel-holder {
+                                position: absolute;
+                                margin: 0px 0px 300px 370px;
+                                img{
+                                    width: 40px;
+                                }
+                            }
+
+                            .calendar-backdrop {
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                width: 350px;
+                                height: 300px;
+                                margin: 0px auto;
+                                // padding: 20px;
+                                // border: 1px solid #f5f5f5;
+                                border-radius: 2em;
+                                // position: relative;
+                                position: absolute;
+                            }
+
+                            .calendar-backdrop.active {
+                                opacity: 1;
+                                visibility: visible;
+                                transform: translateY(190px);
+                                transition: 0.5s ease;
+                            }
+    
+                            .calendar-backdrop.inactive {
+                                opacity: 0;
+                                visibility: hidden;
+                                // display: none;
+                                // transform: translateY(-20px);
+                                transform: translateY(150px);
+                                transition: 0.5s ease;
+                                position: absolute;
+                            }
+
+                        }
+
+                        .button {
+                            margin: 0px auto ;
+                            padding: 15px 0px 15px 0px;
+                            border-radius: 2em;
+                            border: none;
+                            width: 30%;
+                            background-color: #0C4CAC;
+                            color: white;
+                            font-size: 15px;
+                            text-align: center;
+                        }
+
+                        // .sub-info {
+                        //     // border: 1px solid red;
+                        //     margin: -11px auto 0px auto;
+                        //     font-size: 13px;
+                        //     color: #0C4CAC;
+                        //     cursor: pointer;
+                        // }
+                    }
 
                 }
 
