--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -16,8 +16,21 @@
         margin: 0px auto;
 
         .link {
+            display: flex;
+            align-items: center;
+            // align-items: end;
             text-decoration: none;
             color: #9e9e9e;
+
+            .logo-text {
+                color: #0C4CAC;
+                font-weight: 500;
+            }
+            
+            img {
+                width: 40px;
+                height: 40px;
+            }
         }
 
         .navbar-header-right {
