--- a/src/View/pages/auth/authotp.scss
+++ b/src/View/pages/auth/authotp.scss
@@ -37,6 +37,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+            p {color: #707070;}
 
             .auth-email {
                 margin: 5px 0px 5px 0px;
