--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -181,20 +181,54 @@
         font-size: 10px;
         color: #c4dff5;
         align-items: center;
+        flex-direction: column;
 
-        .link {
-            text-decoration: none;
-            color: #c4dff5;
-            margin: 0px auto 0px auto;
+        .step1 {
+            display: flex;
+            align-items: center;
+            // justify-content: center;
+            // border: 1px solid red;
+            width: 100%;
+            height: 90%;
+
+            .link {
+                text-decoration: none;
+                color: #c4dff5;
+                margin: 0px auto 0px auto;
+            }
+    
+            .patientnavbar-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // border: 1px solid white;
+                margin: 0px auto 0px auto;
+                gap: 5px;
+            }
         }
 
-        .patientnavbar-item {
+        .step2 {
             display: flex;
-            flex-direction: column;
             align-items: center;
-            // border: 1px solid white;
-            margin: 0px auto 0px auto;
-            gap: 5px;
+            // justify-content: center;
+            // border: 1px solid red;
+            width: 100%;
+            height: 10%;
+
+            .link {
+                text-decoration: none;
+                color: #c4dff5;
+                margin: 0px auto 0px auto;
+            }
+    
+            .patientnavbar-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // border: 1px solid white;
+                margin: 0px auto 0px auto;
+                gap: 5px;
+            }
         }
         
     }
