--- a/src/View/pages/patientLogin/plogin.scss
+++ b/src/View/pages/patientLogin/plogin.scss
@@ -565,6 +565,22 @@
                     position: absolute;
                 }
 
+                .phase5.active {
+                    opacity: 1;
+                    visibility: visible;
+                    transform: translateY(0);
+                    transition: 0.5s ease;
+                }
+
+                .phase5.inactive {
+                    opacity: 0;
+                    // visibility: hidden;
+                    display: none;
+                    transform: translateY(-20px);
+                    transition: 0.5s ease;
+                    position: absolute;
+                }
+
             }
             
         }
