--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -186,6 +186,9 @@
         .step1 {
             display: flex;
             align-items: center;
+            flex-direction: column;
+            gap: 30px;
+            padding: 70px 0px 0px 0px;
             // justify-content: center;
             // border: 1px solid red;
             width: 100%;
